--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "threejs-journey-exercise",
+  "name": "nicolas-becharat-vite",
   "private": true,
   "version": "0.0.0",
   "type": "module",
