--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nicolas-becharat-vite",
+  "name": "nicolas-becharat",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,6 @@
     "vite": "^4.0.4"
   },
   "dependencies": {
-    "gsap": "^3.11.4",
     "lil-gui": "^0.17.0",
     "three": "^0.148.0"
   }
